# ujep_tui

./: Cargo.toml  README.md  login.json  output.json  profile.json  timetable.json
src/: app.rs  fetch_timetable.rs  login.rs  main.rs  timetable.rs  ui.rs
