[package]
name = "ujep_tui"
version = "0.1.1"
edition = "2021"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
ratatui = "0.20"
crossterm = "0.25"
chrono = "0.4"
dirs = "4.0"
reqwest = { version = "0.11", features = ["json", "gzip"] }
tokio = { version = "1", features = ["full"] }